--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+
+@theme {
+      --color-primary-kalm: #37A0AF;
+      --color-secondary-kalm: #CCE2E5; 
+      --color-tertiary-kalm: #306067; 
+      --color-bg-kalm: #E8E2E0;
+};
