hice un par de bobinadas de estilos para no caer en demecia, habría que conseguir una font para la marca dios

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,6 @@
 @theme {
       --color-primary-kalm: #37A0AF;
       --color-secondary-kalm: #CCE2E5; 
-      --color-tertiary-kalm: #306067; 
+      --color-dark-kalm: #306067; 
       --color-bg-kalm: #E8E2E0;
 };
